# Ecommerce-Analytics

./: README.md  pyproject.toml
data/lakehouse/olist_closed_deals_dataset.delta/: .part-00000-0eb1ce3b-805c-4a32-85c0-5cec968c401f-c000.snappy.parquet.crc  part-00000-0eb1ce3b-805c-4a32-85c0-5cec968c401f-c000.snappy.parquet
data/lakehouse/olist_customers_dataset.delta/: .part-00000-14bf5b62-8b04-466b-acdf-f5cf971e544d-c000.snappy.parquet.crc  .part-00001-c7bee21c-f387-41c8-bb0c-c026a5304334-c000.snappy.parquet.crc  .part-00002-12284c89-0876-43bd-9087-34144b17de90-c000.snappy.parquet.crc  part-00000-14bf5b62-8b04-466b-acdf-f5cf971e544d-c000.snappy.parquet  part-00001-c7bee21c-f387-41c8-bb0c-c026a5304334-c000.snappy.parquet  part-00002-12284c89-0876-43bd-9087-34144b17de90-c000.snappy.parquet
data/lakehouse/olist_geolocation_dataset.delta/: .part-00000-f487bce5-db25-498c-9bd5-28399a6e5984-c000.snappy.parquet.crc  .part-00001-f7d7e606-f389-41b3-b3c6-9b87a7cf6e58-c000.snappy.parquet.crc  .part-00002-fc8c0ed0-158a-44eb-950e-69727be79fc5-c000.snappy.parquet.crc  .part-00003-1a91e940-87ea-4137-b276-de6d4c6a103c-c000.snappy.parquet.crc  .part-00004-8aaeeab5-7ce0-4f7c-81fe-a0a4dec06ae2-c000.snappy.parquet.crc  .part-00005-acdbef58-f8fc-41a0-a493-1302ef6e5c87-c000.snappy.parquet.crc  .part-00006-15dfc51e-d1fc-490a-8439-0ad32650ddaa-c000.snappy.parquet.crc  .part-00007-5cb18797-1f11-4d0f-8d77-ab556eb82f0f-c000.snappy.parquet.crc  part-00000-f487bce5-db25-498c-9bd5-28399a6e5984-c000.snappy.parquet  (+7 more)
src/: etl.py  extract.py  load.py  pipeline.py
(+122 files in other folders)
